--- a/README.html
+++ b/README.html
@@ -237,8 +237,8 @@ Facebook Page - <a href="https://facebook.com/Pipeboard-105017771541767" rel="no
 <strong>NPM Page</strong> - <a href="https://npmjs.com/org/pipeboard" rel="nofollow">https://npmjs.com/org/pipeboard</a></p>
 <h2><a id="user-content-repositories" class="anchor" aria-hidden="true" href="#repositories"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"></path></svg></a>Repositories</h2>
 <p>Don't like GitHub? Don't worry, you can find us at other locations too.</p>
-<p><strong>BitBucket</strong> - <a href="https://bitbucket.io/Pipeboard/Pipeboard" rel="nofollow">https://bitbucket.io/Pipeboard/Pipeboard</a>
-<strong>GitLabs</strong> - <a href="https://gitlabs.com/Pipeboard/Pipeboard" rel="nofollow">https://gitlabs.com/Pipeboard/Pipeboard</a>
+<p><strong>BitBucket</strong> - <a href="https://bitbucket.io/Pipeboard/Pipeboard" rel="nofollow">https://bitbucket.io/Pipeboard/Pipeboard</a><br>
+<strong>GitLabs</strong> - <a href="https://gitlabs.com/Pipeboard/Pipeboard" rel="nofollow">https://gitlabs.com/Pipeboard/Pipeboard</a><br>
 <strong>Sourceforge</strong> - <a href="https://sourceforge.net/projects/pipeboard" rel="nofollow">https://sourceforge.net/projects/pipeboard</a></p>
 </article>
   </div>
